// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Label test on web renders VideoLabel with an explicit title 1`] = `
<div>
  <svg
    height={12}
    width={20.64}
  >
    <rect
      fill="#1D1D1B"
      height="13.5721404"
      width="15.4550103"
      x="0.154639175"
      y="0.139754386"
    />
    <polygon
      fill="#1D1D1B"
    />
    <polygon
      fill="#1D1D1B"
    />
  </svg>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(0,131,71,1)",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": "12px",
        "fontWeight": "400",
        "letterSpacing": "1.2px",
        "lineHeight": "12px",
        "marginLeft": "5px",
        "top": "2px",
      }
    }
  >
    SWIMMING
  </div>
</div>
`;

exports[`Video Label test on web renders VideoLabel without an explicit title 1`] = `
<div>
  <svg
    height={12}
    width={20.64}
  >
    <rect
      fill="#1D1D1B"
      height="13.5721404"
      width="15.4550103"
      x="0.154639175"
      y="0.139754386"
    />
    <polygon
      fill="#1D1D1B"
    />
    <polygon
      fill="#1D1D1B"
    />
  </svg>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(0,131,71,1)",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": "12px",
        "fontWeight": "400",
        "letterSpacing": "1.2px",
        "lineHeight": "12px",
        "marginLeft": "5px",
        "top": "2px",
      }
    }
  >
    VIDEO
  </div>
</div>
`;
